--- a/site/portfolio.html
+++ b/site/portfolio.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./vars.css">
     <link rel="stylesheet" href="./style.css">
   
-    <title>Sobre mim</title>
+    <title>Portfolio</title>
 </head>
 <body>
     <title>Galeria de Fotos</title>
@@ -23,36 +23,27 @@
             <li><a href="inicio.html" class="navegacao1">Pagina inicial</a></li>
             <li><a href="portfolio.html" class="navegacao2">Portfolio</a></li>
             <li><a href="sobre-mim.html" class="navegacao2">Sobre mim</a></li>
-            <li><a href="servicos.html" class="navegacao2">Serviços</a></li>
             <li><a href="contato.html" class="navegacao2">Contato</a></li>
         </ul>
     </nav>
-
     </section>
-        <h2>SOBRE MIM</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati facere blanditiis numquam harum accusamus magni ipsum odit modi, reprehenderit eaque quam officia inventore consectetur possimus dolore maxime facilis! Aspernatur, eligendi.</p>
-        <img src="https://cdn.pixabay.com/photo/2020/05/13/18/58/nature-5168551_1280.jpg" alt="imagem" class="imagem-portfolio">
+    
     <section>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit repellendus ipsam nobis minus dolores consectetur ut sunt expedita nemo natus non provident, hic dignissimos laborum aspernatur vitae est suscipit exercitationem.</p>
 
-    </section>
-        <h2>MISSAO</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati facere blanditiis numquam harum accusamus magni ipsum odit modi, reprehenderit eaque quam officia inventore consectetur possimus dolore maxime facilis! Aspernatur, eligendi.</p>
         <img src="https://cdn.pixabay.com/photo/2020/05/13/18/58/nature-5168551_1280.jpg" alt="imagem" class="imagem-portfolio">
-    <section>
-
-    </section>
-        <h2>VISAO</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati facere blanditiis numquam harum accusamus magni ipsum odit modi, reprehenderit eaque quam officia inventore consectetur possimus dolore maxime facilis! Aspernatur, eligendi.</p>
+        <img src="https://media.istockphoto.com/id/502426696/pt/foto/bela-vista-do-mar.jpg?s=612x612&w=0&k=20&c=wyEX71XMvatuBUMia4xqPHhia1-U1P9UjofLL_frPHQ=" alt="imagem" class="imagem-portfolio">
+        <img src="https://media.istockphoto.com/id/1322277517/pt/foto/wild-grass-in-the-mountains-at-sunset.jpg?s=612x612&w=0&k=20&c=_ntY-fAtPvvYUbH2RcUvUr1up4OBd6mDuzgp7PZPOXY=" alt="imagem" class="imagem-portfolio">
+        <br>
         <img src="https://cdn.pixabay.com/photo/2020/05/13/18/58/nature-5168551_1280.jpg" alt="imagem" class="imagem-portfolio">
-    <section>
-
-    </section>
-        <h2>VALORES</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati facere blanditiis numquam harum accusamus magni ipsum odit modi, reprehenderit eaque quam officia inventore consectetur possimus dolore maxime facilis! Aspernatur, eligendi.</p>
+        <img src="https://media.istockphoto.com/id/502426696/pt/foto/bela-vista-do-mar.jpg?s=612x612&w=0&k=20&c=wyEX71XMvatuBUMia4xqPHhia1-U1P9UjofLL_frPHQ=" alt="imagem" class="imagem-portfolio">
+        <img src="https://media.istockphoto.com/id/1322277517/pt/foto/wild-grass-in-the-mountains-at-sunset.jpg?s=612x612&w=0&k=20&c=_ntY-fAtPvvYUbH2RcUvUr1up4OBd6mDuzgp7PZPOXY=" alt="imagem" class="imagem-portfolio">
+        <br>
         <img src="https://cdn.pixabay.com/photo/2020/05/13/18/58/nature-5168551_1280.jpg" alt="imagem" class="imagem-portfolio">
-    <section>
-
+        <img src="https://media.istockphoto.com/id/502426696/pt/foto/bela-vista-do-mar.jpg?s=612x612&w=0&k=20&c=wyEX71XMvatuBUMia4xqPHhia1-U1P9UjofLL_frPHQ=" alt="imagem" class="imagem-portfolio">
+        <img src="https://media.istockphoto.com/id/1322277517/pt/foto/wild-grass-in-the-mountains-at-sunset.jpg?s=612x612&w=0&k=20&c=_ntY-fAtPvvYUbH2RcUvUr1up4OBd6mDuzgp7PZPOXY=" alt="imagem" class="imagem-portfolio">
     </section>
+
      <footer>
       <h2>NOME DA EMPRESA</h2>
       <h3>Localização</h3>
